# caliper

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  run_email_demo  run_landing_page_demo
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/: __init__.py
apps/api/: __init__.py  autotune_evaluator.py  decision_service.py  dependencies.py  main.py
apps/cli/: main.py
apps/demo_email/: main.py
apps/demo_web/: __init__.py  main.py
apps/operator_ui/: __init__.py  main.py
apps/worker/: loop.py  main.py  scheduler_backends.py
deploy/compose/: docker-compose.service.yml
deploy/env/: .env.embedded.example  .env.service.example  .env.shared.example
docs/: README.md  autotune-ops.md  autotune-roadmap.md  autotune.md
docs/adr/: ADR-TEMPLATE.md  README.md
docs/execution/: ADAPTERS_AND_SURFACES_SPEC.md  API_AND_EVENT_CONTRACTS.md  API_APP_SKELETON.md  ASSIGNMENT_ENGINE.md  BUILD_CHARTER.md  C3_EMBEDDED_SERVICE_PARITY_EXPOSURE_OUTCOME.md  C4_REPORT_SUMMARY_CORRECTNESS.md  CLI.md  CLICKHOUSE_ANALYTICS_BACKEND.md  CONTEXTUAL_PROMOTION_GATE_SCAFFOLD.md  CONTEXT_SCHEMA_VERSIONING.md  DEMO_ORCHESTRATORS.md  DISJOINT_LINUCB_POLICY.md  EMAIL_DEMO.md  EMAIL_WEBHOOK_OUTCOMES.md  EPSILON_GREEDY_POLICY.md  EXPOSURE_INGEST.md  HUMAN_READABLE_REPORTS_POLISH.md  JOB_STATE_MACHINE.md  KAFKA_EVENT_BUS.md  MINIMAL_OPERATOR_UI.md  OBP_INTEGRATION.md  ORGANIZATION_ROUTER_RUNTIME.md  OUTCOME_INGEST.md  PYTHON_SDK.md  REFERENCE_PRD.md  REFERENCE_RFC.md  SHADOW_MODE_SCAFFOLD.md  STORAGE_BACKEND.md  TEMPORAL_SCHEDULER_BACKEND.md  TESTING_AND_ACCEPTANCE_SPEC.md  TYPESCRIPT_SDK.md  WEB_ADAPTER.md  WORKFLOW_ADAPTER.md  WORKFLOW_DEMO.md
docs/fixtures/: README.md
docs/prompts/: autotune_candidate_prompt.md  autotune_promotion_prompt.md  autotune_run_prompt.md
docs/resources/: autotune_playbook.md
docs/runbooks/: WORK_LOG.md  WORK_LOG_TEMPLATE.md
examples/: __init__.py  common.py
examples/email_demo/: __init__.py  demo.py
examples/web_demo/: __init__.py  demo.py
examples/workflow_demo/: __init__.py  demo.py
scripts/: __init__.py  backup_restore.py  demo_workflow.py  ingest_email_reply_signal.py  run_email_demo.py  run_email_demo_with_tunnel.sh  run_embedded.py  run_landing_demo_with_tunnel.sh  run_landing_page_demo.py  seed_demo_data.py  tunnel_helpers.py
tests/: conftest.py
tests/integration/: test_api_app_skeleton.py  test_api_arm_lifecycle.py  test_api_assign.py  test_api_autotune.py  test_api_exposures.py  test_api_job_crud.py  test_api_job_state_machine.py  test_api_outcomes.py  test_api_policy_snapshots.py  test_api_reports.py  test_api_response_schemas.py  test_decision_summary_api.py  test_demo_orchestrators.py  test_demo_web_server.py  test_email_demo.py  test_event_ledger_sqlite.py  test_operator_ui.py  test_projection_rebuild_sqlite.py  test_storage_postgres.py  test_storage_sqlite.py  test_ts_sdk_service.py  test_web_demo.py  test_worker_scheduler.py  test_workflow_demo.py
tests/property/: test_property_smoke.py
tests/unit/: test_assignment_engine.py  test_autotune_evaluator.py  test_autotune_flow_logic.py  test_autotune_policy.py  test_backup_restore.py  test_caliper_service.py  test_cli_commands.py  test_clickhouse_analytics_store.py  (+20 more)
(+71 files in other folders)
